# LolCamSwitcher

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLIENT_SERVER.md  README.md  SETUP.md  TESTING.md  build-client.bat  build-client.spec  build.bat  build.spec  client_main.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  server_main.py
.github/workflows/: docs.yml  release.yml
docker/: DOCKER.md
docker/caddy/: Caddyfile
docker/director/: Dockerfile  entrypoint.sh  load-env.py  requirements-server.txt
docker/nginx-rtmp/: Dockerfile  nginx.conf
docker/obs/: Dockerfile  configure-obs.py  entrypoint.sh  wait-and-start-stream.py
docker/obs/profile/: basic.ini
docs/: CHANGELOG.md  CLIENT_SERVER.md  DOCKER.md  SETUP.md  TESTING.md  index.md
lol_auto_director/: __init__.py  config.py  engine.py
lol_auto_director/buffer/: recorder.py  timeline.py
lol_auto_director/client/: __main__.py  engine.py  gui.py  relay.py
lol_auto_director/common/: event_source.py  schemas.py
lol_auto_director/director/: priority.py  scoring.py  strategy.py  timeline.py
lol_auto_director/gui/: app.py
lol_auto_director/lol/: api.py  events.py
lol_auto_director/obs/: controller.py
lol_auto_director/server/: __main__.py  app.py  config.py  hub.py
lol_auto_director/session_log/: game_logger.py
lol_cam_switcher/: __init__.py  config.py  engine.py
lol_cam_switcher/buffer/: recorder.py  timeline.py
lol_cam_switcher/client/: __main__.py  config.py  engine.py  gui.py  relay.py
lol_cam_switcher/common/: event_source.py  schemas.py
lol_cam_switcher/director/: priority.py  scoring.py  strategy.py  timeline.py
lol_cam_switcher/gui/: app.py
lol_cam_switcher/lol/: api.py  events.py
lol_cam_switcher/obs/: controller.py
lol_cam_switcher/server/: __main__.py  app.py  auth.py  config.py  env_loader.py  hub.py
lol_cam_switcher/session_log/: game_logger.py
scripts/: check-env.sh  test_live_events.py
tests/: test_api_mapping.py  test_director.py  test_env_loader.py  test_game_logger.py  test_server_hub.py
