[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-auto-director"
version = "1.4.0"
description = "LoL dual-POV auto director: Windows client agents relay live events; Linux Docker server (nginx-rtmp + API + OBS regie) for Twitch broadcast"
requires-python = ">=3.10"
dependencies = [
    "obsws-python>=1.7.0",
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lol-auto-director = "main:main"
lol-director-server = "server_main:main"
lol-director-client = "client_main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
