[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-cam-switcher"
version = "1.4.0"
description = "LolCamSwitcher — LoL dual-POV regie: Windows client agents relay live events; Linux Docker server (nginx-rtmp + API + OBS) for Twitch broadcast"
requires-python = ">=3.10"
dependencies = [
    "obsws-python>=1.7.0",
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lol-cam-switcher = "main:main"
lol-cam-switcher-server = "server_main:main"
lol-cam-switcher-client = "client_main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
